--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"gulp-uglify": "*",
 		"gulp-util": "*",
 		"gulp-concat": "*",
+		"gulp-shell": "^0.5.1",
 		"gulp-rsync": "^0.0.5",
-		"prismjs": "^1.3.0",
 		"reveal.js": "^3.1.0"
 	},
 	"scripts": {
