--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"gulp-concat": "*",
 		"gulp-shell": "^0.5.1",
 		"gulp-rsync": "^0.0.5",
-		"reveal.js": "^3.1.0"
+		"reveal.js": "^3.1.0",
+		"font-awesome": "*"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
