--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ indent_size = 4
 insert_final_newline = false
 charset = utf-8
 
-[*.{ejs,html,json,jinja}]
+[*.{ejs,html,json,jinja,lr}]
 indent_style = space
 indent_size = 2
