Port over blog posts

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -24,6 +24,11 @@ label = Publication date
 type = date
 width = 1/4
 
+[fields.description]
+label = Description
+type = string
+size = large
+
 [fields.body]
 label = Body
 type = markdown
