Site appears to have the same styles now

--- a/models/page.ini
+++ b/models/page.ini
@@ -9,3 +9,9 @@ type = string
 [fields.body]
 label = Body
 type = markdown
+
+[fields.section_wrap]
+label = Section Wrap
+type = boolean
+default = false
+checkbox_label = If true, the content will be wrapped in a `section` tag.
