Docker seems to work?

--- a/Dockerfiles/site.conf
+++ b/Dockerfiles/site.conf
@@ -1,14 +1,11 @@
 server {
-        listen 80;
-        server_name .eligundry.com
-                    .eligundry.ninja
-                    .eligundry.dev
-                    ;
+    listen 80;
+    server_name .eligundry.dev;
 
-        root /var/www;
-        try_files $uri $uri.html $uri/ /index.html;
+    root /var/www;
+    try_files $uri $uri.html $uri/ /index.html;
 
-        location ~ /.well-known {
-                allow all;
-        }
+    location ~ /.well-known {
+        allow all;
+    }
 }
