Make nginx play well with the defaults

--- a/Dockerfiles/site.conf
+++ b/Dockerfiles/site.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name .eligundry.dev;
 
-    root /var/www;
+    root /usr/share/nginx/html;
     try_files $uri $uri.html $uri/ /index.html;
 
     location ~ /.well-known {
