Wire up reveal.js to work correctly

--- a/models/presentation.ini
+++ b/models/presentation.ini
@@ -3,6 +3,11 @@ name = Presentation
 label = {{ this.title }}
 hidden = yes
 
+[fields.title]
+label = Title
+type = string
+size = large
+
 [fields.pub_date]
 label = Publication date
 type = date
