--- a/webpack/package.json
+++ b/webpack/package.json
@@ -8,6 +8,7 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-sass": "^3.13.1",
