--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,17 +1,21 @@
 {
   "private": true,
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "less": "^2.7.1",
+    "font-awesome": "^4.7.0",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-sass": "^3.13.1",
+    "reveal.js": "^3.5.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0"
+    "webpack": "^1.15.0"
   }
 }
