Ported in all my ICYMI posts from Mattermost

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -13,11 +13,9 @@ label = Author
 type = string
 width = 1/2
 
-[fields.twitter_handle]
-label = Twitter Handle
-type = string
-width = 1/4
-addon_label = @
+[fields.tags]
+label = Tags
+type = strings
 
 [fields.pub_date]
 label = Publication date
