Further tweak ICYMI section.

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -13,9 +13,9 @@ label = Author
 type = string
 width = 1/2
 
-[fields.tags]
-label = Tags
-type = strings
+[fields.tag]
+label = Tag
+type = string
 
 [fields.pub_date]
 label = Publication date
