Docker is now the preferred way to run this site.
* Move the base Docker image from nginx -> python:2-slim.
* Node 8 is now the Node version.
* Add a Node lock file for quicker installs.
* Add docker-compose setup for local development.
* The Docker image will run nginx by default, with an optional override
  to run the local Lektor server with nginx in the background.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ indent_size = 4
 insert_final_newline = false
 charset = utf-8
 
-[*.{ejs,html,json,jinja,lr,xml,md}]
+[*.{ejs,html,json,jinja,lr,xml,md,yml}]
 indent_style = space
 indent_size = 2
