--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     image: 'eligundry/eligundry.com:local'
     environment:
-      - RUN_LEKTOR=1
+      - RUN_LEKTOR=true
     ports:
       - "5000:5000"
       - "8080:80"
