Add cron task to update the last.fm image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   website:
     build: .
-    image: 'eligundry/eligundry.com:local'
+    image: 'eligundry/eligundry.com'
+    container_name: 'eligundry.com'
     environment:
       - RUN_LEKTOR=true
     ports:
