--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-README.md
-.gitignore
 .editorconfig
-webpack/node_modules
 .git
+.gitignore
+README.md
 assets/static
+content/last-fm.jpeg
+webpack/node_modules
