--- a/models/page.ini
+++ b/models/page.ini
@@ -10,6 +10,10 @@ type = string
 label = Body
 type = markdown
 
+[fields.html]
+label = HTML
+type = html
+
 [fields.section_wrap]
 label = Section Wrap
 type = boolean
