More resume updates.

--- a/docker/site.conf
+++ b/docker/site.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name .eligundry.localhost;
+    server_name .eligundry.localhost .eligundry.com;
 
     root /usr/share/nginx/html;
     try_files $uri $uri.html $uri/ /index.html;
