Add docker compose with nginx + letsencrypt containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,35 @@ services:
     container_name: 'eligundry.com'
     environment:
       - RUN_LEKTOR=true
+      - VIRTUAL_HOST=eligundry.localhost,eligundry.com
+      - VIRTUAL_PORT=8080
     ports:
       - "5000:5000"
       - "8080:80"
     volumes:
       - .:/opt/eligundry.com
+
+  nginx:
+    image: jwilder/nginx-proxy:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/nginx/conf.d
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
+      - ./nginx/certs:/etc/nginx/certs
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt
+    environment:
+      - LETSENCRYPT_HOST=eligundry.com,www.eligundry.com
+      - LETSENCRYPT_EMAIL=eligundry@gmail.com
+      - LETSENCRYPT_TEST=${LETSENCRYPT_TEST}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    volumes_from:
+      - nginx
