Actually be able to turn off lektor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: 'eligundry.com'
     environment:
-      - RUN_LEKTOR=true
+      - RUN_LEKTOR=${RUN_LEKTOR}
       - VIRTUAL_HOST=eligundry.localhost,eligundry.com
       - VIRTUAL_PORT=8080
     ports:
