--- a/docker/site.conf
+++ b/docker/site.conf
@@ -1,5 +1,6 @@
 server {
-    listen 8080;
+    # listen 8080;
+    listen 80;
     server_name _;
 
     root /usr/share/nginx/html;
@@ -7,5 +8,6 @@ server {
 
     location ~ /.well-known {
         allow all;
+        root /usr/share/nginx/html;
     }
 }
