--- a/docker/site.conf
+++ b/docker/site.conf
@@ -1,7 +1,7 @@
 server {
     # listen 8080;
     listen 80;
-    server_name _;
+    server_name eligundry.localhost eligundry.com www.eligundry.com;
 
     root /usr/share/nginx/html;
     try_files $uri $uri.html $uri/ /index.html;
