--- a/docker/site.conf
+++ b/docker/site.conf
@@ -1,4 +1,10 @@
 server {
+    listen 443;
+    server_name eligundry.localhost eligundry.com www.eligundry.com;
+    rewrite ^(.*) http://$host$1 permanent;
+}
+
+server {
     # listen 8080;
     listen 80;
     server_name eligundry.localhost eligundry.com www.eligundry.com;
