--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: website
     environment:
       - RUN_LEKTOR=${RUN_LEKTOR}
-      - VIRTUAL_HOST=eligundry.localhost,eligundry.com
+      - VIRTUAL_HOST=eligundry.localhost,eligundry.com,www.eligundry.com
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=eligundry.com,www.eligundry.com
       - LETSENCRYPT_EMAIL=eligundry@gmail.com
@@ -36,6 +36,8 @@ services:
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
     container_name: letsencrypt
+    environment:
+      - ACME_TOS_HASH=cc88d8d9517f490191401e7b54e9ffd12a2b9082ec7a1d4cec6101f9f1647e7b
     volumes:
       - ./nginx/certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
