--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,45 @@
 version: '2'
 services:
   website:
-    image: 'eligundry/eligundry.com'
+    image: eligundry/eligundry.com
     build: .
     container_name: website
     environment:
       - RUN_LEKTOR=${RUN_LEKTOR}
-      - VIRTUAL_HOST=eligundry.localhost,eligundry.com
+      - VIRTUAL_HOST=eligundry.localhost,eligundry.com,www.eligundry.com
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=eligundry.com,www.eligundry.com
       - LETSENCRYPT_EMAIL=eligundry@gmail.com
       - LETSENCRYPT_TEST=${LETSENCRYPT_TEST}
     ports:
       - "5000:5000"
-      - "80:80"
+      - "8080:8080"
     volumes:
       - .:/opt/eligundry.com
       - ./docker/site.conf:/etc/nginx/sites-enabled/eligundry.com
 
-  # @TODO Fix this piece of shit you garbage human
-  # nginx:
-  #   image: jwilder/nginx-proxy:alpine
-  #   container_name: nginx
-  #   environment:
-  #     - ENABLE_IPV6=true
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - /etc/nginx/conf.d
-  #     - /etc/nginx/vhost.d
-  #     - /usr/share/nginx/html
-  #     - ./nginx/certs:/etc/nginx/certs:ro
-  #     - /var/run/docker.sock:/tmp/docker.sock:ro
+  nginx:
+    image: jwilder/nginx-proxy:alpine
+    container_name: nginx
+    environment:
+      - ENABLE_IPV6=true
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/nginx/conf.d
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
+      - ./nginx/certs:/etc/nginx/certs:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
 
-  # letsencrypt:
-  #   image: jrcs/letsencrypt-nginx-proxy-companion
-  #   container_name: letsencrypt
-  #   volumes:
-  #     - ./nginx/certs:/etc/nginx/certs:rw
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
-  #   volumes_from:
-  #     - nginx
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt
+    environment:
+      - ACME_TOS_HASH=cc88d8d9517f490191401e7b54e9ffd12a2b9082ec7a1d4cec6101f9f1647e7b
+    volumes:
+      - ./nginx/certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    volumes_from:
+      - nginx
