--- a/docker/site.conf
+++ b/docker/site.conf
@@ -5,8 +5,7 @@ server {
 }
 
 server {
-    # listen 8080;
-    listen 80;
+    listen 8080;
     server_name eligundry.localhost eligundry.com www.eligundry.com;
 
     root /usr/share/nginx/html;
@@ -16,4 +15,6 @@ server {
         allow all;
         root /usr/share/nginx/html;
     }
+
+    rewrite ^/résumé http://$host/resume redirect;
 }
