Redirects are tricky.

--- a/docker/site.conf
+++ b/docker/site.conf
@@ -16,5 +16,5 @@ server {
         root /usr/share/nginx/html;
     }
 
-    rewrite ^/résumé http://$host/resume redirect;
+    rewrite ^/résumé https://eligundry.com/resume redirect;
 }
