Add an error page.

--- a/docker/site.conf
+++ b/docker/site.conf
@@ -5,6 +5,12 @@ server {
     root /usr/share/nginx/html;
     try_files $uri $uri.html $uri/ /index.html;
 
+    error_page 404 500 502 503 504 /error/;
+    location = /error/ {
+        root /usr/share/nginx/html;
+        internal;
+    }
+
     location ~ /.well-known {
         allow all;
         root /usr/share/nginx/html;
