--- a/docker/site.conf
+++ b/docker/site.conf
@@ -5,14 +5,9 @@ server {
     root /usr/share/nginx/html;
     try_files $uri $uri.html $uri/ /index.html;
 
-    # error_page 404 500 502 503 504 /error/;
-    # location = /error/ {
-    #     root /usr/share/nginx/html;
-    #     internal;
-    # }
-
-    # location ~ /.well-known {
-    #     allow all;
-    #     root /usr/share/nginx/html;
-    # }
+    error_page 404 500 502 503 504 /error/;
+    location = /error/ {
+        root /usr/share/nginx/html;
+        internal;
+    }
 }
