--- a/webpack/package.json
+++ b/webpack/package.json
@@ -15,5 +15,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.15.0"
+  },
+  "dependencies": {
+    "turbolinks": "^5.1.1"
   }
 }
