Move the lektor blog out of the way

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.pyc
-node_modules/
-assets/static/gen
-content/last-fm.jpeg
-nginx/*
-.env
+**/node_modules/
+lektor/assets/static/gen
+lektor/content/last-fm.jpeg
+lektor/nginx/*
+lektor/.env
