--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -34,8 +34,12 @@
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.10.1",
+    "react-github-calendar": "^0.14.1",
+    "react-goodreads": "^1.0.7",
+    "react-goodreads-shelf": "^1.0.3",
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
+    "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.7.1",
     "typescript-eslint-parser": "^22.0.0",
     "url-join": "^4.0.0"
