--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,10 +3,10 @@ on:
   push:
     branches:
       - master
-      - github-actions-and-such
+      - gatsby-take-2
 
 jobs:
-  build:
+  api:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -15,6 +15,6 @@ jobs:
       with:
         username: eligundry
         password: "${{ secrets.DOCKER_PASSWORD }}"
-        image_name: eligundry/eligundry.com
-        image_tag: action-test
-        dockerfile: Dockerfile.new
+        image_name: eligundry/api.eligundry.com
+        image_tag: latest
+        dockerfile: Dockerfile.api
