--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -29,6 +29,7 @@
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
+    "join-array": "^1.1.2",
     "lodash": "^4.17.15",
     "netlify-cms-app": "^2.11.0",
     "prismjs": "^1.18.0",
