--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-advanced",
+  "name": "eligundry.com",
   "description": "GatsbyJS starter that includes examples for advanced use cases.",
   "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "author": "Eli Gundry <eligundry@gmail.com>",
   "dependencies": {
     "date-fns": "^2.9.0",
     "gatsby": "^2.18.18",
@@ -12,7 +12,6 @@
     "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-lodash": "^3.1.18",
     "gatsby-plugin-manifest": "^2.2.34",
-    "gatsby-plugin-netlify-cms": "^4.1.34",
     "gatsby-plugin-nprogress": "^2.1.17",
     "gatsby-plugin-offline": "^3.0.30",
     "gatsby-plugin-react-helmet": "^3.1.18",
@@ -31,7 +30,6 @@
     "gatsby-transformer-sharp": "^2.3.9",
     "join-array": "^1.1.2",
     "lodash": "^4.17.15",
-    "netlify-cms-app": "^2.11.0",
     "prismjs": "^1.18.0",
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
@@ -66,6 +64,7 @@
     "stylelint": "^11.0.0",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-standard": "^19.0.0",
+    "typescript": "^3.7.5",
     "write-good": "^1.0.1"
   },
   "keywords": [
