--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -4,12 +4,14 @@
   "version": "1.1.0",
   "author": "Eli Gundry <eligundry@gmail.com>",
   "dependencies": {
+    "@types/react-helmet": "^5.0.15",
     "date-fns": "^2.9.0",
     "gatsby": "^2.18.18",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-catch-links": "^2.1.21",
     "gatsby-plugin-feed": "^2.3.25",
     "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-graphql-codegen": "^2.2.1",
     "gatsby-plugin-lodash": "^3.1.18",
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-nprogress": "^2.1.17",
