--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -3,6 +3,7 @@
   "description": "GatsbyJS starter that includes examples for advanced use cases.",
   "version": "1.1.0",
   "author": "Eli Gundry <eligundry@gmail.com>",
+  "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
     "date-fns": "^2.9.0",
