--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-twitter": "^2.1.17",
     "gatsby-plugin-typescript": "^2.1.23",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-copy-linked-files": "^2.1.33",
     "gatsby-remark-images": "^3.1.39",
