--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,3 +31,22 @@ jobs:
         image_name: eligundry/website.eligundry.com
         image_tag: latest
         dockerfile: Dockerfile.frontend
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - api
+      - frontend
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+
+    - name: Install dependencies
+      run: pip install requests
+
+    - name: Deploy to production
+      run: python scripts/deploy.py
