--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -8,8 +8,14 @@ server {
         index  index.html index.htm;
     }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    # error_page   500 502 503 504  /50x.html;
+    # location = /50x.html {
+    #     root   /usr/share/nginx/html;
+    # }
+
+    # Cache the JS/CSS aggressively as it's file names cache bust automatically
+    location ~* \.(?:js|css)$ {
+        expires 1y;
+        add_header Cache-Control "public";
     }
 }
