Need to provide the root for the JS stuff

--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -15,6 +15,7 @@ server {
 
     # Cache the JS/CSS aggressively as it's file names cache bust automatically
     location ~* \.(?:js|css)$ {
+        root   /usr/share/nginx/html;
         expires 1y;
         add_header Cache-Control "public";
     }
