Add custom error page

--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -1,17 +1,8 @@
 server {
     listen       80;
     server_name  localhost;
-
-    location / {
-        root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-        index  index.html index.htm;
-    }
-
-    # error_page   500 502 503 504  /50x.html;
-    # location = /50x.html {
-    #     root   /usr/share/nginx/html;
-    # }
+    root   /usr/share/nginx/html;
+    error_page 400 401 403 404 500 502 503 504 /404.html;
 
     # Cache the JS/CSS aggressively as it's file names cache bust automatically
     location ~* \.(?:js|css)$ {
