--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -42,6 +42,7 @@
     "react-goodreads": "^1.0.7",
     "react-goodreads-shelf": "^1.0.3",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
     "react-share": "^3.0.1",
     "react-tooltip": "^4.0.3",
     "react-twitter-embed": "^3.0.3",
