--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,10 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
+[*.{css,scss,less}]
+indent_style = space
+indent_size = 2
+
 [*.{ejs,html,json,jinja,lr,xml,md,yml}]
 indent_style = space
 indent_size = 2
