--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,7 +5,6 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
-    "@types/react-helmet": "^5.0.15",
     "date-fns": "^2.9.0",
     "gatsby": "^2.18.18",
     "gatsby-image": "^2.2.37",
@@ -21,7 +20,6 @@
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-twitter": "^2.1.17",
     "gatsby-plugin-typescript": "^2.1.23",
-    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-copy-linked-files": "^2.1.33",
     "gatsby-remark-images": "^3.1.39",
@@ -48,11 +46,11 @@
     "react-use": "^13.21.0",
     "rehype-react": "^4.0.1",
     "styled-components": "^5.0.0",
-    "typescript-eslint-parser": "^22.0.0",
     "url-join": "^4.0.0",
     "use-detect-print": "0.0.2"
   },
   "devDependencies": {
+    "@types/react-helmet": "^5.0.15",
     "babel-plugin-styled-components": "^1.10.6",
     "cli-glob": "^0.1.0",
     "eslint": "^6.8.0",
@@ -61,14 +59,17 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gh-pages": "^2.2.0",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
+    "source-map-explorer": "^2.3.1",
     "stylelint": "^11.0.0",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-standard": "^19.0.0",
     "typescript": "^3.7.5",
+    "typescript-eslint-parser": "^22.0.0",
     "write-good": "^1.0.1"
   },
   "keywords": [
@@ -77,7 +78,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "gatsby develop",
+    "start": "gatsby develop --host 0.0.0.0",
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
