--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -90,7 +90,8 @@
     "lint:md": "remark content/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
-    "format:styles": "prettier '**/*.{css,scss}' --write"
+    "format:styles": "prettier '**/*.{css,scss}' --write",
+    "stats:html": "source-map-explorer public/*.js --html public/stats.html"
   },
   "remarkConfig": {
     "plugins": [
