Add lazy loading of the last.fm image & twitter timeline

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -39,6 +39,7 @@
     "react-goodreads-shelf": "^1.0.3",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-lazyload": "^2.6.5",
     "react-share": "^3.0.1",
     "react-tooltip": "^4.0.3",
     "react-twitter-embed": "^3.0.3",
