--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
+    "gravatar": "^1.8.0",
     "lodash": "^4.17.15",
     "prismjs": "^1.18.0",
     "react": "^16.10.1",
