Add a BasicAuthMiddleware & apply it to posting feelings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile.api
+    environment:
+      AUTH_USER: eligundry
+      AUTH_PASSWORD: password
     networks:
       backend: {}
     volumes:
