Make a program to download my lastfm tracks

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,7 +1,10 @@
-static-build-api:
-	go build \
-        --tags "json1" \
-        -installsuffix 'static' \
-        -o /bin/api cmd/api/main.go
+GO=$(shell which go)
+GO_BUILD=$(GO) build --tags "json1" -installsuffix 'static'
 
-static-build: static-build-api
+static-build-api:
+	$(GO_BUILD) -o /bin/api main.go
+
+static-build-lastfm-downloader:
+	$(GO_BUILD) -o /bin/lastfm-downloader cmd/lastfm-downloader/main.go
+
+static-build: static-build-api static-build-lastfm-downloader
