--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,9 @@ services:
   api:
     container_name: eg-api
     image: eligundry/api.eligundry.com
-    entrypoint: ["sh", "-c", "cd cmd/api; watcher"]
+    entrypoint: /go/bin/watcher
+    env_file:
+      - ./.env
     build:
       context: ./
       dockerfile: Dockerfile.api
