--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -35,13 +35,13 @@
     "react": "^16.13.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
-    "react-fetch-hook": "^1.8.3",
     "react-github-calendar": "^0.14.1",
     "react-goodreads": "^1.0.8",
     "react-goodreads-shelf": "1.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
     "react-lazyload": "^2.6.9",
+    "react-query": "^2.15.4",
     "react-tooltip": "^4.2.8",
     "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.9.5",
@@ -49,8 +49,7 @@
     "rehype-react": "^4.0.1",
     "styled-components": "^5.1.1",
     "twin.macro": "^1.7.0",
-    "url-join": "^4.0.0",
-    "use-detect-print": "0.0.2"
+    "url-join": "^4.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.160",
