--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   api:
     container_name: eg-api
-    image: eligundry/api.eligundry.com
+    image: eligundry/api.eligundry.com:latest
     entrypoint: /go/bin/watcher
     env_file:
       - ./.env
