--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -30,6 +30,7 @@
     "gatsby-transformer-remark": "^2.8.29",
     "gatsby-transformer-sharp": "^2.5.13",
     "gravatar": "^1.8.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
@@ -40,6 +41,7 @@
     "react-goodreads-shelf": "1.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-lazyload": "^2.6.9",
     "react-query": "^2.15.4",
     "react-tooltip": "^4.2.8",
