--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -41,6 +41,7 @@
     "react-goodreads-shelf": "1.1.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
+    "react-image-lightbox": "^5.1.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-lazyload": "^2.6.9",
     "react-query": "^2.15.4",
