--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,6 +5,7 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "@types/react-lazy-load-image-component": "^1.5.1",
     "date-fns": "^2.15.0",
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
