--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,7 +5,9 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "@types/chart.js": "^2.9.27",
     "@types/react-lazy-load-image-component": "^1.5.1",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.15.0",
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
@@ -35,6 +37,7 @@
     "lodash": "^4.17.20",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-github-calendar": "^0.14.1",
