--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -27,7 +27,7 @@
     "gatsby-remark-prismjs": "^3.6.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-source-filesystem": "^2.4.0",
-    "gatsby-transformer-remark": "^2.9.1",
+    "gatsby-transformer-remark": "2.8.29",
     "gatsby-transformer-sharp": "^2.5.21",
     "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
