--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,6 +5,7 @@
   "author": "Eli Gundry <eligundry@gmail.com>",
   "repository": "https://github.com/eligundry/eligundry.com",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
@@ -32,6 +33,7 @@
     "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "react-chartjs-2": "^2.10.0",
     "prismjs": "^1.22.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -54,6 +56,7 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.27",
     "@types/lodash": "^4.14.164",
     "@types/react-helmet": "^5.0.16",
     "@types/react-lazy-load-image-component": "^1.5.1",
@@ -68,6 +71,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
+    "gatsby-plugin-zopfli": "^2.0.0",
     "gh-pages": "^2.2.0",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
@@ -90,7 +94,7 @@
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
