--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -7,40 +7,41 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
-    "gatsby": "^2.25.1",
+    "gatsby": "^3.4.0",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-catch-links": "^2.3.15",
-    "gatsby-plugin-feed": "^2.6.0",
-    "gatsby-plugin-google-analytics": "^2.4.0",
+    "gatsby-plugin-catch-links": "^3.4.0",
+    "gatsby-plugin-feed": "^3.4.0",
+    "gatsby-plugin-google-analytics": "^3.4.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-lodash": "^3.3.13",
-    "gatsby-plugin-no-sourcemaps": "^2.2.1",
-    "gatsby-plugin-nprogress": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.7.0",
-    "gatsby-plugin-sitemap": "^2.5.0",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-plugin-twitter": "^2.3.12",
-    "gatsby-plugin-typescript": "^2.5.0",
-    "gatsby-remark-autolink-headers": "^2.4.0",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.4.0",
-    "gatsby-remark-prismjs": "^3.6.0",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-source-filesystem": "^2.4.0",
-    "gatsby-transformer-remark": "2.8.29",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-plugin-lodash": "^4.4.0",
+    "gatsby-plugin-no-sourcemaps": "^3.4.0",
+    "gatsby-plugin-nprogress": "^3.4.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-s3": "^0.3.8",
+    "gatsby-plugin-sharp": "^3.4.0",
+    "gatsby-plugin-sitemap": "^4.0.0",
+    "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-plugin-twitter": "^3.4.0",
+    "gatsby-plugin-typescript": "^3.4.0",
+    "gatsby-remark-autolink-headers": "^4.1.0",
+    "gatsby-remark-copy-linked-files": "^4.1.0",
+    "gatsby-remark-images": "^5.1.0",
+    "gatsby-remark-prismjs": "^5.1.0",
+    "gatsby-remark-responsive-iframe": "^4.1.0",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-remark": "^4.1.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
-    "prismjs": "^1.22.0",
-    "react": "^16.14.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
     "react-chartjs-2": "^2.10.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-github-calendar": "^2.0.2",
     "react-goodreads": "^1.0.8",
     "react-goodreads-shelf": "1.1.1",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-image-lightbox": "^5.1.1",
     "react-lazy-load-image-component": "^1.5.0",
@@ -52,7 +53,9 @@
     "react-use": "^13.27.1",
     "rehype-react": "^4.0.1",
     "styled-components": "^5.2.1",
-    "twin.macro": "^1.12.0",
+    "tailwindcss": "^2.1.2",
+    "twin.macro": "^2.4.1",
+    "typescript": "^4.2.4",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
@@ -62,6 +65,7 @@
     "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/react-lazyload": "^2.6.0",
     "@types/styled-components": "^5.1.4",
+    "@types/tailwindcss": "^2.0.2",
     "babel-plugin-styled-components": "^1.11.1",
     "cli-glob": "^0.1.0",
     "eslint": "^6.8.0",
@@ -72,7 +76,6 @@
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-plugin-zopfli": "^2.0.0",
-    "gh-pages": "^2.2.0",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.4",
@@ -80,7 +83,6 @@
     "stylelint": "^11.0.0",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "typescript": "^3.9.7",
     "typescript-eslint-parser": "^22.0.0",
     "write-good": "^1.0.3"
   },
@@ -122,7 +124,6 @@
       "config": "src/tailwind.config.js",
       "preset": "styled-components",
       "autoCssProp": true,
-      "debugProp": true,
       "debugPlugins": false,
       "debug": false
     }
